# napari-cell-gater

./: .gitignore  pyproject.toml
.github/workflows/: test_and_deploy.yml
docs/source/: api.md  conf.py  contributing.md  index.rst  installation.md  usage.md
src/cell_gater/: napari.yaml
src/cell_gater/_tests/: test_data_model.py
src/cell_gater/widgets/: sample_widget.py
test_data/imgs/: 1.tif  2.tif  3.tif  5.tif
test_data/segs/: 3.tif
tests/: test_data_model.py  test_sample_widget.py  test_scatter_widget.py
tests/test_data/imgs/: 1.ome.tif  2.ome.tif  3.ome.tif  4.ome.tif  4.tif  5.ome.tif
tests/test_data/quants/: 1.csv  2.csv  3.csv  4.csv  5.csv
tests/test_data/segs/: 1.tif  2.tif  4.tif  5.tif
