[project]
authors = [{name = "Jose Nimo", email = "nimojose@gmail.com"}]
dependencies = []
name = "napari-cell-gater"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
napari_cell_gater = { path = ".", editable = true }

[tool.pixi.tasks]
